--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
 @import '~leaflet/dist/leaflet.css';
+@import '~leaflet.markercluster/dist/MarkerCluster.Default.css';
 
 body {
   margin: 0;
