--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,23 @@
 <div id="map"
      leaflet
      [leafletOptions]="options"
+     [(leafletZoom)]="zoom"
+     [(leafletCenter)]="center"
      [leafletBaseLayers]="baseLayers"
      [leafletLayersControlOptions]="layersControlOptions"
+     [leafletMarkerCluster]="markerClusterData">
 
-     [leafletMarkerCluster]="markerClusterData"
-     [leafletMarkerClusterOptions]="markerClusterOptions"
-     (leafletMarkerClusterReady)="markerClusterReady($event)">
+  <div id="zoom-in" class="control" (click)="zoomIn()" [class.disabled]="zoom >= zoomMax">
+    <span>+</span>
+  </div>
+  <div id="zoom-out" class="control" (click)="zoomOut()" [class.disabled]="zoom <= zoomMin">
+    <span>-</span>
+  </div>
+  <div id="gps" class="control">
+    <mat-icon>gps_not_fixed</mat-icon>
+  </div>
+
 </div>
+
+
 
