added controls placeholders

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,17 @@
   height: 100vh;
 }
 
+.controls {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+
 .control {
+  margin-bottom: 0.5rem;
   color: white;
   background-color: #4798D0;
   border: 1px solid rgba(0,0,0,0.3);
@@ -12,13 +22,11 @@
   align-items: center;
   justify-content: center;
   font-weight: bolder;
-  position: absolute;
-  z-index: 1000;
-  left: 0.5rem;
   height: 2rem;
   width: 2rem;
   cursor: pointer;
   user-select: none;
+  text-shadow: 0 0 4px black;
 }
 
 .control span {
@@ -47,6 +55,13 @@
   top: -2px;
 }
 
-#gps {
+#info {
   top: 5.5rem;
+}
+
+#gps {
+  top: 8rem;
+}
+
+#layers {
 }
