--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 @import '~leaflet/dist/leaflet.css';
 @import '~leaflet.markercluster/dist/MarkerCluster.Default.css';
 
+@import '~@angular/material/_theming.scss';
+
+@include mat-core();
+
 body {
   margin: 0;
   padding: 0;
