--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,14 +10,17 @@
 
 header {
   padding: 0.5rem;
-  background-color: #4798D0;
+  background-color: #1B76C8;
   color: white;
-  text-shadow: 0 0 4px black;
+  /*text-shadow: 0 0 4px black;*/
   border-bottom: 1px solid rgba(0,0,0,0.3);
+
+  display: flex;
+  flex-direction: row;
 }
 
 header h1 {
-  margin: 0;
+  margin: 0 0 0 0.5rem;
 }
 
 #map {
@@ -34,9 +37,9 @@ header h1 {
 
 footer {
   padding: 0.5rem;
-  background-color: #4798D0;
+  background-color: #1B76C8;
   color: white;
-  text-shadow: 0 0 4px black;
+  /*text-shadow: 0 0 4px black;*/
   border-top: 1px solid rgba(0,0,0,0.3);
 }
 
@@ -56,7 +59,7 @@ footer a {
 .control {
   margin-bottom: 0.5rem;
   color: white;
-  background-color: #4798D0;
+  background-color: #1B76C8;
   border: 1px solid rgba(0,0,0,0.3);
   border-radius: 15%;
   display: flex;
