added github link

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,6 +23,14 @@ header h1 {
   margin: 0 0 0 0.5rem;
 }
 
+header .filler {
+  flex-grow: 1;
+}
+
+header .github {
+  line-height: 0;
+}
+
 #map {
   flex-grow: 1;
 }
