alt attribute on github image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     <h1>Handipark - Nice</h1>
     <div class="filler"></div>
     <button mat-button class="install" (click)="install()" *ngIf="installPromptEvent">Installer</button>
-    <a class="github" href="https://github.com/tgambet/handipark" *ngIf="!installPromptEvent"><img src="assets/github.png" height="32"/></a>
+    <a class="github" href="https://github.com/tgambet/handipark" *ngIf="!installPromptEvent"><img src="assets/github.png" height="32" alt="GitHub"/></a>
   </header>
 
   <div id="map"
